Added configs auto-updater (config.yml, splitted config.yml, all territories files) Updated lang file (keep compatibility with old ones because there will not be updated automatically) Added customisation in config.yml (territory border colors, attack line heights) Added compatibility with SaberFactions (until 1.21.1) Added new [BETA] objectives, DEMOLITION and EXTERMINATION Added checkpoint value to AttackRequirements (can attack from this territory despite having no more startpoint)
Fixed Errors when player stands on ControlPoints objectives
Fixed towny teams cannot attacking territories in Towny

Optimized how lang files are read
Improved dynmap territory displaying
Optimized server performances by requiring one player standing in territory to update bossbars